# Next-Task

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENCE  Makefile  README.md  notes.md  pyproject.toml  template.json
docs/: projects.md
next/: __init__.py
next/interface/: __init__.py  cli.py
next_task/: __init__.py  app.py
next_task/database/: __init__.py  setup.sql  store.py
next_task/interface/: cli.py  console_output.py  controller.py
next_task/services/: __init__.py  catalogue.py  database.py  file.py  logging.py  models.py  projects.py  store.py  tasks.py  template.json
tests/: __init__.py  conftest.py  performance_tests.py
tests/data_mocks/: data_setup.py  tasks_1.json  tasks_2.json  tasks_3.json
tests/data_mocks/large_file/: .tasks.json
tests/data_mocks/performance/: .tasks.json
tests/data_mocks/performance_small/: .tasks.json
tests/data_mocks/task_file/: .tasks.json
tests/database/: __init__.py  test.db  test_store.py
tests/database/setup/: simple_db.sql
tests/interface/: __init__.py  test_cli.py  test_controller.py
tests/services/: __init__.py  test_catalogue.py  test_example.py  test_file.py  test_models.py  test_projects.py  test_store.py  test_tasks.py
