[tool.poetry]
name = "next_task"
version = "0.2.1"
description = "A barebones task management solution"
authors = ["J-McB <jmcbean3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "3.7.0"
mypy = "^0.931"
toml = "^0.10.2"
loguru-mypy = "^0.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
Next = "next_task.interface.cli:main"
