[tool.poetry]
name = "next_task"
version = "0.3.11"
description = "A barebones task management solution"
readme = "README.md"
authors = ["J-McB <jmcbean3@gmail.com>"]
license = "MIT"
packages = [
    {include = "next_task"},
    {include = "next_task/VERSION"},
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.4"
pygaljs = "^1.0.2"

[tool.poetry.dev-dependencies]
loguru = "^0.5.3"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "3.7.0"
mypy = "^0.931"
toml = "^0.10.2"
loguru-mypy = "^0.0.4"
isort = "^5.10.1"
code2flow = "^2.5.0"
pytest-benchmark = "^3.4.1"
pygal = "^3.0.0"
pyflakes = "^2.4.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
Next = "next_task.interface.cli:main"
